--- a/Primer parcial/DES-V3/makefile
+++ b/Primer parcial/DES-V3/makefile
@@ -1,5 +1,5 @@
-a.out: main.o archivos.o des.o bits.o
-	g++ main.o archivos.o des.o bits.o
+a.out: main.o archivos.o des.o bits.o tiempo.o
+	g++ main.o archivos.o des.o bits.o tiempo.o
 main.o: main.cpp
 	g++ -c main.cpp -Wall
 archivos.o: archivos.cpp
@@ -8,7 +8,9 @@ des.o: des.cpp
 	g++ -c des.cpp -Wall
 bits.o: bits.cpp
 	g++ -c bits.cpp -Wall
+tiempo.o: tiempo.cpp
+	g++ -c tiempo.cpp -Wall
 clean:
-	rm main.o archivos.o des.o a.out bits.o
+	rm main.o archivos.o des.o a.out bits.o tiempo.o
 run: a.out
 	./a.out
